tests/paczka1/small_fuzzy/56242871.err
Error in line 13: 686 686 127,8
Error in line 5: A686 A686 33,1
Error in line 14: cVGK1DlS A686 45,5
